<resources>
    <string name="app_name">Move57</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="send">Send</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="awards">Awards</string>
    <string name="rating">Rating</string>
    <string name="value">Value</string>
    <string name="source">Source</string>
</resources>